Updated client/server with new API
