# OBFN/agent/python-flask-server/swagger_server/models/__init__.py
@@ -3,5 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.operation import Operation
-from swagger_server.models.operations import Operations
+from swagger_server.models.obfn import Obfn
+from swagger_server.models.obfn_parameters import ObfnParameters
