# OBFN/agent/python-flask-server/swagger_server/models/obfn_parameters.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+from swagger_server.models.obfn import Obfn
+
+class ObfnParameters(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, obfn_pool: List[Obfn]=None, wavelength: float=None):  # noqa: E501
+        """ObfnParameters - a model defined in Swagger
+
+        :param obfn_pool: The obfn_pool of this ObfnParameters.  # noqa: E501
+        :type obfn_pool: List[Obfn]
+        :param wavelength: The wavelength of this ObfnParameters.  # noqa: E501
+        :type wavelength: float
+        """
+        self.swagger_types = {
+            'obfn_pool': List[Obfn],
+            'wavelength': float
+        }
+
+        self.attribute_map = {
+            'obfn_pool': 'obfn-pool',
+            'wavelength': 'wavelength'
+        }
+
+        self._obfn_pool = obfn_pool
+        self._wavelength = wavelength
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ObfnParameters':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The obfn-parameters of this ObfnParameters.  # noqa: E501
+        :rtype: ObfnParameters
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def obfn_pool(self) -> List[Obfn]:
+        """Gets the obfn_pool of this ObfnParameters.
+
+
+        :return: The obfn_pool of this ObfnParameters.
+        :rtype: List[Obfn]
+        """
+        return self._obfn_pool
+
+    @obfn_pool.setter
+    def obfn_pool(self, obfn_pool: List[Obfn]):
+        """Sets the obfn_pool of this ObfnParameters.
+
+
+        :param obfn_pool: The obfn_pool of this ObfnParameters.
+        :type obfn_pool: List[Obfn]
+        """
+
+        self._obfn_pool = obfn_pool
+
+    @property
+    def wavelength(self) -> float:
+        """Gets the wavelength of this ObfnParameters.
+
+
+        :return: The wavelength of this ObfnParameters.
+        :rtype: float
+        """
+        return self._wavelength
+
+    @wavelength.setter
+    def wavelength(self, wavelength: float):
+        """Sets the wavelength of this ObfnParameters.
+
+
+        :param wavelength: The wavelength of this ObfnParameters.
+        :type wavelength: float
+        """
+
+        self._wavelength = wavelength
