# OBFN/agent/python-flask-server/swagger_server/models/operations.py
@@ -1,65 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.operation import Operation  # noqa: F401,E501
-from swagger_server import util
-
-
-class Operations(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, operations: List[Operation]=[]):  # noqa: E501
-        """Operations - a model defined in Swagger
-
-        :param operations: The operations of this Operations.  # noqa: E501
-        :type operations: List[Operation]
-        """
-        self.swagger_types = {
-            'operations': List[Operation]
-        }
-
-        self.attribute_map = {
-            'operations': 'operations'
-        }
-
-        self._operations = operations
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Operations':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Operations of this Operations.  # noqa: E501
-        :rtype: Operations
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def operations(self) -> List[Operation]:
-        """Gets the operations of this Operations.
-
-
-        :return: The operations of this Operations.
-        :rtype: List[Operation]
-        """
-        return self._operations
-
-    @operations.setter
-    def operations(self, operations: List[Operation]):
-        """Sets the operations of this Operations.
-
-
-        :param operations: The operations of this Operations.
-        :type operations: List[Operation]
-        """
-
-        self._operations = operations
